No more magenta

--- a/app/apps/dashboard/templates/dashboard/form.html
+++ b/app/apps/dashboard/templates/dashboard/form.html
@@ -5,7 +5,7 @@
     {% comment %} {{ form.invalidate_cache|render_rotterdam_formulier }} {% endcomment %}
     <p>
         <button type="submit"
-                class="btn btn-action btn-action-v2"
+                class="btn btn-action"
                 data-action="sidesheet#toggleFilter">Pas filters toe</button>
     </p>
 </form>
