--- a/app/apps/main/templates/melding/detail/melding_annuleren.html
+++ b/app/apps/main/templates/melding/detail/melding_annuleren.html
@@ -73,7 +73,7 @@
                     <button type="reset" class="btn btn-tertiary" data-action="modal#closeModal">
                         <span>Annuleren</span>
                     </button>
-                    <button type="submit" class="btn btn-action-v2">
+                    <button type="submit" class="btn btn-action">
                         <span>Melding annuleren</span>
                     </button>
                 </div>
