--- a/app/apps/main/templates/melding/detail/melding_heropenen.html
+++ b/app/apps/main/templates/melding/detail/melding_heropenen.html
@@ -41,7 +41,7 @@
                     <button type="reset" class="btn btn-tertiary" data-action="modal#closeModal">
                         <span>Annuleren</span>
                     </button>
-                    <button type="submit" class="btn btn-action-v2" data-melding-heropenen-target="submitButton">
+                    <button type="submit" class="btn btn-action" data-melding-heropenen-target="submitButton">
                         <span>Heropenen</span>
                     </button>
                 </div>
