--- a/app/apps/main/templates/melding/detail/melding_spoed_veranderen.html
+++ b/app/apps/main/templates/melding/detail/melding_spoed_veranderen.html
@@ -32,7 +32,7 @@
                             data-action="modal#closeModal">
                         <span>Annuleren</span>
                     </button>
-                    <button type="submit" class="btn btn-action-v2">
+                    <button type="submit" class="btn btn-action">
                         <span>{{ form.submit_label }}</span>
                     </button>
                 </div>
