--- a/app/apps/main/templates/melding/detail/taken_aanmaken_form.html
+++ b/app/apps/main/templates/melding/detail/taken_aanmaken_form.html
@@ -32,7 +32,7 @@
                 {% comment %} <button type="reset" class="btn btn-tertiary" data-action="modal#closeModal" data-modal-target="modal">
                     <span>Annuleren</span>
                 </button> {% endcomment %}
-                {% comment %} <button type="submit" class="btn btn-action-v2">
+                {% comment %} <button type="submit" class="btn btn-action">
                     <span>Aanmaken</span>
                 </button> {% endcomment %}
             </div>
