--- a/app/apps/main/templates/500.html
+++ b/app/apps/main/templates/500.html
@@ -25,7 +25,7 @@
                         Oeps, er is iets misgegaan. Probeer PlanR over 10 seconden te refreshen, als dit probleem zich blijft voordoen, meld deze fout dan.
                     </p>
                     <div class="container__flex">
-                        <a href="/melding" class="btn btn-action-v2">Refresh</a>
+                        <a href="/melding" class="btn btn-action">Refresh</a>
                         <button class="btn btn-tertiary" id="showAction">Fout melden</button>
                     </div>
                 </div>
@@ -63,12 +63,12 @@
                     <div class="container__flex">
                         <a target="_blank"
                            rel="noopener noreferrer"
-                           class="btn btn-action-v2"
+                           class="btn btn-action"
                            id="sendEmail"
                            href="mailto:productowner-morsb@rotterdam.nl?subject=PlanR - Interne serverfout: 500&body=Type foutmelding: Interne serverfout 500">
                             Verstuur via e-mail
                         </a>
-                        <a href="/melding" class="btn btn-action-v2 hidden">Naar overzicht</a>
+                        <a href="/melding" class="btn btn-action hidden">Naar overzicht</a>
                     </div>
                 </div>
             </div>
