--- a/app/apps/main/templates/melding/detail/melding_afhandelen_form.html
+++ b/app/apps/main/templates/melding/detail/melding_afhandelen_form.html
@@ -101,7 +101,7 @@
                             <button type="reset" class="btn btn-tertiary" data-action="modal#closeModal">
                                 <span>Annuleren</span>
                             </button>
-                            <button disabled data-meldingbehandelformulier-target="submitButton" type="submit" class="btn btn-action-v2">
+                            <button disabled data-meldingbehandelformulier-target="submitButton" type="submit" class="btn btn-action">
                                 <span>Versturen</span>
                             </button>
                         </div>
