--- a/app/apps/main/templates/melding/detail/melding_pauzeren.html
+++ b/app/apps/main/templates/melding/detail/melding_pauzeren.html
@@ -68,7 +68,7 @@
                         <span>Annuleren</span>
                     </button>
                     <button type="submit"
-                            class="btn btn-action-v2"
+                            class="btn btn-action"
                             data-melding-pauzeren-target="submitButton"
                             {% if actieve_taken %}disabled{% endif %}>
                         <span>Pauzeren</span>
