--- a/app/apps/main/templates/melding/detail/taak_verwijderen.html
+++ b/app/apps/main/templates/melding/detail/taak_verwijderen.html
@@ -22,7 +22,7 @@
                 <button type="reset" class="btn btn-tertiary" data-action="modal#closeModal">
                     <span>Annuleren</span>
                 </button>
-                <button type="submit" class="btn btn-action-v2">
+                <button type="submit" class="btn btn-action">
                     <span>Taak verwijderen</span>
                 </button>
             </div>
