--- a/app/frontend/assets/styles/components/_buttons.scss
+++ b/app/frontend/assets/styles/components/_buttons.scss
@@ -1,81 +1,3 @@
-$buttons: (
-    "action": (
-        "text-decoration": none,
-        "background": $action,
-        "border": $action,
-        "color": $white,
-        "hover-background": $action-active,
-        "hover-border": $action-active,
-        "hover-color": $white,
-        "active-background": $action-active,
-        "active-border": $action-active,
-        "active-color": $white,
-        "disabled-background": $gray-tint04,
-        "disabled-border": $gray-tint04,
-        "disabled-color": $gray-tint09,
-    ),
-    "primary": (
-        "text-decoration": none,
-        "background": $primary,
-        "border": $primary,
-        "color": $white,
-        "hover-background": $primary-active,
-        "hover-border": $primary-active,
-        "hover-color": $white,
-        "active-background": $primary-active,
-        "active-border": $primary-active,
-        "active-color": $white,
-        "disabled-background": $gray-tint04,
-        "disabled-border": $gray-tint04,
-        "disabled-color": $gray-tint09,
-    ),
-    "secondary": (
-        "text-decoration": none,
-        "background": $secondary,
-        "border": $secondary,
-        "color": $white,
-        "hover-background": $gray-tint11,
-        "hover-border": $gray-tint11,
-        "hover-color": $white,
-        "active-background": $gray-tint11,
-        "active-border": $gray-tint11,
-        "active-color": $white,
-        "disabled-background": $gray-tint04,
-        "disabled-border": $gray-tint04,
-        "disabled-color": $gray-tint09,
-    ),
-    "tertiary": (
-        "text-decoration": none,
-        "background": $white,
-        "border": $gray-tint08,
-        "color": $gray-tint11,
-        "hover-background": $white,
-        "hover-border": $primary,
-        "hover-color": $primary,
-        "active-background": $white,
-        "active-border": $primary,
-        "active-color": $primary,
-        "disabled-background": $gray-tint01,
-        "disabled-border": $gray-tint05,
-        "disabled-color": $gray-tint07,
-    ),
-    "text": (
-        "text-decoration": $link-decoration,
-        "background": $white,
-        "border": $white,
-        "color": $primary,
-        "hover-background": $white,
-        "hover-border": $white,
-        "hover-color": $gray-tint11,
-        "active-background": $white,
-        "active-border": $white,
-        "active-color": $gray-tint11,
-        "disabled-background": $white,
-        "disabled-border": $white,
-        "disabled-color": $gray-tint08,
-    ),
-) !default;
-
 // Buttons with only an icon intended for fields with extra information
 button[class="icon"] {
     border: none;
@@ -124,35 +46,18 @@ textarea {
 
     &-action {
         background-color: $action;
-        border-color: $action;
         color: $white;
+        border-color: $action;
+        transition: background-color 0.15s ease-in-out;
 
         &:hover,
         &:focus-visible {
-            color: $white;
-            background-color: $action-active;
-            border-color: $action-active;
+            background-color: darken($action, 10%);
+            border-color: darken($action, 10%);
         }
         &[disabled] {
             background-color: $gray-tint04;
             border-color: $gray-tint04;
-        }
-
-        &-v2 {
-            background-color: $neutral-900;
-            color: $white;
-            border-color: $neutral-900;
-            transition: background-color 0.15s ease-in-out;
-
-            &:hover,
-            &:focus-visible {
-                background-color: darken($neutral-900, 10%);
-                border-color: darken($neutral-900, 10%);
-            }
-            &[disabled] {
-                background-color: $gray-tint04;
-                border-color: $gray-tint04;
-            }
         }
 
         &--primary {
