--- a/app/frontend/assets/styles/components/_alert.scss
+++ b/app/frontend/assets/styles/components/_alert.scss
@@ -103,7 +103,7 @@
     &--qualification {
         padding: 0.37rem 10px 0.37rem 22px;
         background-color: $blue-200;
-        font-size: 0.778rem;
+        font-size: $fz-14;
         font-weight: 400;
         word-break: break-word;
 
