--- a/app/frontend/assets/styles/components/_infosheet.scss
+++ b/app/frontend/assets/styles/components/_infosheet.scss
@@ -88,7 +88,7 @@ dialog.infosheet {
             display: inline-block;
             margin: 0 auto;
             color: currentColor;
-            font-size: 0.889rem;
+            font-size: $fz-16;
 
             svg {
                 width: 15px;
