--- a/app/frontend/assets/styles/components/_tables.scss
+++ b/app/frontend/assets/styles/components/_tables.scss
@@ -58,12 +58,12 @@
         background-color: $gray-tint01;
         background-size: cover;
         background-position: 50% 50%;
-        height: 48px;
-        width: 64px;
-        margin: 0 $input-padding-y 4px 0;
+        height: 36px;
+        width: 36px;
+        margin: 6px;
 
         .thumbnail {
-            height: 48px;
+            height: 100%;
             display: block;
             margin: 0 auto;
         }
@@ -72,9 +72,10 @@
     .background-image {
         background-color: $gray-tint01;
         background-image: url(../icons/noimage.svg);
-        background-size: 40%;
-        height: 48px;
-        width: 64px;
+        background-size: 70%;
+        height: 36px;
+        width: 36px;
+        margin: 6px;
         background-repeat: no-repeat;
         background-position: center;
     }
