--- a/app/apps/main/templates/melding/detail/melding_afhandelen_form.html
+++ b/app/apps/main/templates/melding/detail/melding_afhandelen_form.html
@@ -86,7 +86,7 @@
                                 Vraag een functioneelbeheerder om deze aan te maken.
                             </div>
                             <fieldset class="fieldset--separated hide" data-meldingbehandelformulier-target="standaardtekstContainer">
-                                <h2>Bericht aan de melder</h2>
+                                <h2 class="h4">Bericht aan de melder</h2>
                                 <div class="form-control__with-helptext js-validation"  data-meldingbehandelformulier-target="standaardtekstOptionsContainer">{{ form.standaardtekst|render_rotterdam_formulier }}</div>
 
                                 <div class="form-control__with-helptext js-validation margin-top">{{ form.omschrijving_extern|render_rotterdam_formulier }}</div>
