--- a/app/frontend/assets/styles/_theme.scss
+++ b/app/frontend/assets/styles/_theme.scss
@@ -141,13 +141,16 @@ $link-hover-color: $primary-active;
 $font-family-sans-serif: "Bolder", Arial, sans-serif;
 
 $headings-font-weight: 700;
-$h1-font-size: calc(1.375rem + 0.5vw);
-$h2-font-size: calc(1.275rem + 0.3vw);
-$h3-font-size: 1.25rem;
-$h4-font-size: 1.125rem;
-$h5-font-size: 1rem;
-$h6-font-size: 0.8888rem;
+$h1-font-size: 2.333rem;
+$h2-font-size: 1.889rem;
+$h3-font-size: 1.556rem;
+$h4-font-size: 1.333rem;
+$h5-font-size: 1.111rem;
+$h6-font-size: 1rem;
 $font-size-base: 1rem;
+$fz-16: 0.889rem;
+$fz-14: 0.778rem;
+$fz-12: 0.667rem;
 
 $body-color: $black;
 $text-muted: $gray-tint08;
