--- a/app/frontend/assets/styles/components/_details-list-with-map.scss
+++ b/app/frontend/assets/styles/components/_details-list-with-map.scss
@@ -29,7 +29,7 @@
                     padding: 0 40px 0 0;
                     border-top: none;
                     h5 {
-                        font-size: 0.778rem;
+                        font-size: $fz-14;
                         font-weight: 400;
                     }
 
@@ -41,7 +41,7 @@
                 }
 
                 small {
-                    font-size: 0.778rem;
+                    font-size: $fz-14;
                     padding-bottom: 1em;
                     display: block;
                 }
@@ -49,7 +49,7 @@
                 dt,
                 dd {
                     font-weight: 400;
-                    font-size: 0.778rem;
+                    font-size: $fz-14;
                 }
 
                 &[open] {
