--- a/app/frontend/assets/styles/components/_incident-details.scss
+++ b/app/frontend/assets/styles/components/_incident-details.scss
@@ -99,7 +99,7 @@
             .btn {
                 background: transparent;
                 font-weight: 400;
-                font-size: 0.778rem;
+                font-size: $fz-14;
                 padding: 6px 8px;
                 margin: 0;
                 min-height: 0;
@@ -211,7 +211,7 @@
     }
 
     dl {
-        font-size: 0.778rem;
+        font-size: $fz-14;
     }
     .divider {
         border-top: 1px solid #ccc;
@@ -263,7 +263,7 @@
         position: absolute;
         top: 1em;
         right: 1em;
-        font-size: 0.778rem;
+        font-size: $fz-14;
         color: $black;
         width: auto;
 
@@ -365,7 +365,7 @@
 .incident-meta-list {
     list-style-type: none;
     margin: 0;
-    font-size: 0.778rem;
+    font-size: $fz-14;
     padding: 0 0.75rem 0.75rem;
 
     li {
@@ -445,7 +445,7 @@
         box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.25);
         display: none;
         opacity: 0;
-        font-size: 0.778rem;
+        font-size: $fz-14;
         transition-property: opacity, display;
         transition-duration: $transition-duration-default;
         transition-timing-function: $transition-ease-default;
