--- a/app/frontend/assets/styles/components/_list-mutations.scss
+++ b/app/frontend/assets/styles/components/_list-mutations.scss
@@ -5,14 +5,14 @@
     }
     .group {
         h3 {
-            font-size: 0.778rem;
+            font-size: $fz-14;
             margin: 0;
             padding: 12px;
             border-bottom: 1px solid $blue-200;
         }
 
         h4 {
-            font-size: 0.778rem;
+            font-size: $fz-14;
             font-weight: 400;
             padding: 0;
             margin: 0;
@@ -34,7 +34,7 @@
         }
 
         .message {
-            font-size: 0.778rem;
+            font-size: $fz-14;
 
             .container__overflow {
                 position: relative;
