--- a/app/frontend/assets/styles/components/_page-beheer.scss
+++ b/app/frontend/assets/styles/components/_page-beheer.scss
@@ -1,6 +1,14 @@
 .page__beheer {
     padding: 0.5rem 0;
 
+    h1 {
+        font-size: $h2-font-size;
+    }
+
+    table {
+        font-size: $fz-14;
+    }
+
     @media (min-width: map-get($grid-breakpoints, lg)) {
         padding: 2rem 0 4rem;
     }
