--- a/app/frontend/assets/styles/components/_navigation.scss
+++ b/app/frontend/assets/styles/components/_navigation.scss
@@ -77,7 +77,7 @@
         font-weight: 700;
         display: block;
         padding: 10px 8px 10px 27px;
-        font-size: 0.7em;
+        font-size: $fz-14;
         min-height: 38px;
         box-sizing: border-box;
         position: relative;
