Styling back-to-top-button

--- a/app/apps/main/templates/melding/melding_detail.html
+++ b/app/apps/main/templates/melding/melding_detail.html
@@ -359,8 +359,7 @@
                             <button data-detail-target="btnToTop"
                                     data-action="detail#scrollToTop"
                                     class="btn btn-to-top">
-                                {% include "icons/arrow-double.svg" %}
-                                Terug naar boven
+                                {% include "icons/arrow-right-v2.svg" %}
                             </button>
                         </div>
                     {% endif %}
