Fontsize table-overview

--- a/app/frontend/assets/styles/components/_tables.scss
+++ b/app/frontend/assets/styles/components/_tables.scss
@@ -85,6 +85,14 @@
 
         td {
             border-bottom: 1px solid $green-400;
+
+            &:nth-child(2) {
+                font-weight: 700;
+            }
+
+            a {
+                text-decoration: none;
+            }
         }
         &:hover {
             cursor: pointer;
