Restyle back-button

--- a/app/apps/main/templates/base_beheer.html
+++ b/app/apps/main/templates/base_beheer.html
@@ -8,7 +8,7 @@
     {% endwith %}
 {% endblock header %}
 {% block pageheader %}
-    {% with hide_menu=True screen_wide=True page_title="PlaRR" %}{{ block.super }}{% endwith %}
+    {% with hide_menu=True screen_wide=True page_title="PlanR" %}{{ block.super }}{% endwith %}
 {% endblock pageheader %}
 <main data-controller="main">
     <div class="{% block container_class %}container container--wide{% endblock container_class %}">
