--- a/app/apps/main/templates/taaktype/taakr.html
+++ b/app/apps/main/templates/taaktype/taakr.html
@@ -28,7 +28,7 @@
                 <p>Nader te bepalen</p>
             {% endif %}
                 <p class="help-text">
-                    De doorlooptijd is een uitkomst van de afspraken die gemaakt zijn met teamleiders. Hier wordt mee bedoeld wat de te verwachten tijd is dat het kost om een taak af te handelen.
+                    De doorlooptijd is gebaseerd op afspraken met de teamleiders. Hiermee wordt bedoeld hoeveel tijd het naar verwachting kost om een taak af te handelen.
                 </p>
             {% if taaktype.waarom_wel|length > 0 %}
                 <h2 class="label--positive">Wanneer wel</h2>
