--- a/app/apps/main/templates/melding/detail/melding_afhandelen_form.html
+++ b/app/apps/main/templates/melding/detail/melding_afhandelen_form.html
@@ -59,7 +59,7 @@
                             </div>
                         {% endif %}
                         {% if form.standaardtekst.field.choices|length %}
-                            <fieldset class="fieldset--separated" data-meldingbehandelformulier-target="resolutieContainer">
+                            <fieldset class="fieldset--separated hide" data-meldingbehandelformulier-target="resolutieContainer">
                                 <div class="form-control__with-helptext js-validation input--separated">{{ form.resolutie|render_rotterdam_formulier }}</div>
                             </fieldset>
                             {% if form.niet_opgelost_reden.field.choices|length %}
@@ -92,9 +92,6 @@
                                 <div class="form-control__with-helptext js-validation margin-top">{{ form.omschrijving_extern|render_rotterdam_formulier }}</div>
                             </fieldset>
                         {% endif %}
-                        <fieldset class="fieldset--separated">
-                            <div class="form-control__with-helptext js-validation input--separated">{{ form.omschrijving_intern|render_rotterdam_formulier }}</div>
-                        </fieldset>
                     </div>
                     <div class="modal-footer modal-footer--sticky">
                         <div class="form-row btn-row btn-row--horizontal">
