--- a/app/frontend/assets/styles/components/_forms.scss
+++ b/app/frontend/assets/styles/components/_forms.scss
@@ -330,6 +330,7 @@ textarea {
         font-weight: 400;
         font-size: $fz-14;
         word-break: break-word;
+        position: relative;
 
         &:has(input:disabled) {
             color: $text-muted;
@@ -337,20 +338,30 @@ textarea {
         }
 
         &:has(input[type="radio"]) {
-            // padding-left: calc(1rem + 8px);
             display: block;
+            padding-left: 23px;
 
             input[type="radio"] {
-                // margin-left: -12px;
                 width: $fz-14;
                 height: $fz-14;
                 margin-top: 0;
+                position: absolute;
+                left: 0;
             }
             small {
                 font-size: $fz-12;
-                display: inline-block;
                 padding-left: 8px;
                 color: $gray-800;
+            }
+        }
+    }
+    .input--separated & {
+        li {
+            label {
+                padding-left: 37px;
+                input[type="radio"] {
+                    left: 14px;
+                }
             }
         }
     }
@@ -1459,6 +1470,9 @@ form.taken-aanmaken {
 }
 
 .fieldset--separated {
+    h2:first-of-type {
+        margin-top: 0;
+    }
     &.hide {
         * {
             display: none;
@@ -1467,6 +1481,9 @@ form.taken-aanmaken {
 }
 
 .input--separated {
+    h3:first-of-type {
+        margin-top: 0;
+    }
     li {
         border: 1px solid $gray-200;
         transition: border-color $transition-duration-default $transition-ease-default;
