--- a/app/apps/main/templates/melding/melding_detail.html
+++ b/app/apps/main/templates/melding/melding_detail.html
@@ -75,7 +75,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div id="melding_detail_status">
+                                <div id="stream_melding_detail_status">
                                     {% include "melding/detail/status.html" %}
                                 </div>
                                 <div id="melding_detail_taken">
