--- a/app/apps/main/templates/melding/detail/melding_afhandelen_success.html
+++ b/app/apps/main/templates/melding/detail/melding_afhandelen_success.html
@@ -3,6 +3,12 @@
 {% include "melding/detail/taken.html" %}
 {% include "melding/detail/melding_detail_titel.html" %}
 
+<turbo-stream action="update" target="stream_melding_detail_status">
+<template>
+    {% include "melding/detail/status.html" %}
+</template>
+</turbo-stream>
+
 <turbo-stream action="update" target="modal_body">
 <template>
     <div data-modal-target="modalSluiten"></div>
