--- a/app/frontend/assets/styles/components/_incident-details.scss
+++ b/app/frontend/assets/styles/components/_incident-details.scss
@@ -88,7 +88,7 @@
                 }
 
                 &:hover {
-                    background: $gray-200;
+                    background: $white;
                 }
             }
         }
@@ -100,7 +100,7 @@
                 background: transparent;
                 font-weight: 400;
                 font-size: $fz-14;
-                padding: 6px 8px;
+                padding: 6px 30px 6px 8px;
                 margin: 0;
                 min-height: 0;
                 width: 100%;
@@ -340,9 +340,10 @@
             }
         }
         a.melding-navigatie {
+            transition: background-color $transition-duration-default $transition-ease-default;
             &:hover,
             &:focus {
-                background-color: $blue-200;
+                background-color: $white;
             }
         }
     }
